# luna-next

./: .gitignore  CMakeLists.txt  COPYING  README.md  luna-next.pro
files/dbus/: luna-next.conf
files/sysbus/: org.webosports.luna.api.json  org.webosports.luna.json.prv.in  org.webosports.luna.json.pub.in  org.webosports.luna.perm.json  org.webosports.luna.role.json.in  org.webosports.luna.service.in  org.webosports.luna.service.prv.in
files/systemd/: luna-next.service
plugins/: CMakeLists.txt  btdeviceclass.cpp  btdeviceclass.h  deviceinfo.cpp  deviceinfo.h  displaycontroller.cpp  eventtype.h  fpscounter.h  lunanextplugin.cpp  lunanextplugin.h  lunaserviceadapter.cpp  lunaserviceadapter.h  qmldir  reticleitem.cpp  reticleitem.h  screenshooter.cpp  settingsadapter.cpp  settingsadapter.h  statusbarservicesconnector.cpp  statusbarservicesconnector.h  units.cpp  units.h  windowstate.h  windowtype.cpp  windowtype.h
plugins/common/: CMakeLists.txt  fileutils.cpp  fileutils.h  fontutils.cpp  fontutils.h  ledsadapter.cpp  ledsadapter.h  lunaserviceadapter.cpp  lunaserviceadapter.h  plugin.cpp  plugin.h  qmldir  settingsadapter.cpp  settingsadapter.h  units.cpp  units.h
plugins/compositor/: CMakeLists.txt  compositor.cpp  compositor.h  compositorwindow.cpp  compositorwindow.h  displaycontroller.cpp  displaycontroller.h  eventtype.cpp  luneosextendedsurface.cpp  luneosextendedsurface.h  plugin.cpp  plugin.h  qmldir  recorder.cpp  recorder.h  screenshooter.cpp  screenshooter.h  webos_shell.cpp  webos_shell.h  windowmodel.cpp  windowmodel.h  windowstate.cpp  windowtype.cpp  windowtype.h
plugins/performance/: BarGraph.qml  CMakeLists.txt  PerformanceOverlay.qml  cpuusage.cpp  cpuusage.h  graphmodel.cpp  graphmodel.h  plugin.cpp  plugin.h  qmldir  renderingtimes.cpp  renderingtimes.h  rendertimer.cpp  rendertimer.h  texturefromimage.cpp  texturefromimage.h
plugins/shell/: CMakeLists.txt  devicekeyhandler.cpp  devicekeyhandler.h  fpscounter.cpp  gesturehandler.cpp  gesturehandler.h  inversemouseareatype.cpp  inversemouseareatype.h  plugin.cpp  plugin.h  qmldir  quickutils.cpp  quickutils.h  reticlehandler.cpp  reticlehandler.h  reticleitem.cpp  reticleitem.h  volumekeys.cpp  volumekeys.h
plugins/shell/notifications/: CMakeLists.txt  categorydefinitionstore.cpp  categorydefinitionstore.h  notification.cpp  notification.h  notificationlistmodel.cpp  notificationlistmodel.h  notificationmanager.cpp  notificationmanager.h  notificationmanagerwrapper.cpp  notificationmanagerwrapper.h  plugin.cpp  plugin.h  qmldir  qobjectlistmodel.cpp  qobjectlistmodel.h
protocol/: luneosextendedsurface.xml  recorder.xml  webos-shell.xml
qml/: DummyWindow.qml
src/: CMakeLists.txt  main.cpp  shellapplication.cpp  shellapplication.h
src/compositor/: compositor.cpp  compositor.h  compositor.qrc  compositorwindow.cpp  compositorwindow.h  lunacompositor.cpp  lunacompositor.h
src/compositor/qml/: GestureArea.qml  luna-next-qml.qmlproject  main.qml
src/compositor/qml/CardView/: CardView.qml  CardWindow.qml  CardWindowDelegate.qml  WindowContainer.qml
src/compositor/qml/Compositor/: Compositor.qml  ContrastEffect.qml  CornerShader.qml  DummyWindow.qml  RoundedItem.qml  WindowContainer.qml  WindowManager.qml  compositor.js
src/compositor/qml/GestureArea/: GestureArea.qml
src/compositor/qml/LaunchBar/: AppLauncher.qml  LaunchBar.qml
src/compositor/qml/LunaGestureArea/: LunaGestureArea.qml
src/compositor/qml/LunaSysAPI/: ApplicationModel.qml
src/compositor/qml/NotificationArea/: NotificationsContainer.qml
src/compositor/qml/StatusBar/: StatusBar.qml
src/compositor/qml/Tests/imports/LunaNext/: FpsCounter.qml  LunaNext.qmltypes  LunaNextStub.js  LunaService.qml  Reticle.qml  WindowStateStub.js  qmldir
src/compositor/qml/Utils/: FpsCounter.qml  LunaNextStub.js  LunaServiceStub.qml  ReticleArea.qml
tests/: CMakeLists.txt  simple-scene.qml  test_webapp.cpp  test_webapp.qrc  tst_ls2component.qml  webapp.qml
tools/: CMakeLists.txt
tools/recorder/: CMakeLists.txt  main.cpp  recorder.cpp  recorder.h
